--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -18,9 +18,9 @@ jobs:
         - name: macOS
           os: macos-latest
         
-        - name: iOS
-          os: macos-latest
-          target: iOS
+        #- name: iOS
+        #  os: macos-latest
+        #  target: iOS
 
         - name: Android32
           os: ubuntu-latest
@@ -37,9 +37,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the mod
-        uses: RoootTheFox/build-geode-mod@main
+        uses: geode-sdk/build-geode-mod@main
         with:
-          bindings: geode-sdk/bindings
+          bindings: TheSillyDoggo/bindings
           bindings-ref: main
           combine: true
           target: ${{ matrix.config.target }}
